--- a/m4r/views/sidebar.erb
+++ b/m4r/views/sidebar.erb
@@ -26,7 +26,7 @@
     <br class="clear" />
   </div>
   <div id="rightDesc">
-      <% if @page.data.include?(:results) && @page.data[:results].length > 0 %>
+      <% if @page.data.include?(:results) && !@page.data[:results].nil? && @page.data[:results].length > 0 %>
       <h3><%= @page[:name].upcase %> RESULTS</h3>
       <ul class="disc">
         <% @page.data[:results].each do |result| %>
