Update style links

--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -710,7 +710,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		jq('#project_locations_csv').attr('href','<%= PLATFORM_API_URL %>/datasets/' + self.stylelayers["Project Locations"].source.replace("finder:","")  + ".csv")
 	  if(self.stylelayers["Project Counts"] != undefined)
 		jq('#project_counts_csv').attr('href','<%= PLATFORM_API_URL %>/datasets/' + self.stylelayers["Project Counts"].source.replace("finder:","")  + ".csv")
-	  if(self.stylelayers["Maternal Health"] != undefined)
+	  if(self.stylelayers["Malnutrition"] != undefined)
 		jq('#indicators_shp').attr('href','<%= PLATFORM_API_URL %>/datasets/' + self.stylelayers["Maternal Health"].source.replace("finder:","")  + ".shp")
 	  if(self.stylelayers["Population"] != undefined)
 		jq('#population_csv').attr('href','<%= PLATFORM_API_URL %>/datasets/' + self.stylelayers["Population"].source.replace("finder:","")  + ".csv")
