--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -2,18 +2,14 @@
   	<ul class="dropmenu">
   	    <% if %w{country}.include?(@page.page_type) %>
           <li class="download"><a title="download" href="#" id="download_data"><span></span>DOWNLOAD</a>     
-              <ul class="dropmenu_options">
-                <li><a href="#" id="project_locations_csv">Project Locations (csv)</a></li>
-                <li><a href="#" id="project_counts_csv">Project Counts (csv)</a></li>
-                <li><a href="#" id="indicators">Indicators (shp)</a></li>
-                <li><a href="#" id="population_csv">Population (csv)</a></li>
+              <ul class="dropmenu_options" id="data_links">
               </ul>
            </li>     
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
                 <li><a href="http://twitter.com/home?status=@page_title+<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" target="_new" id="">Twitter</a></li>
-                <li><a href="#" id="">Facebook</a></li>
-                <li><a href="#" id="">Embed the Map</a></li>
+                <li><a href="http://facebook.com" id="">Facebook</a></li>
+                <!-- <li><a href="#" id="">Embed the Map</a></li> -->
               </ul>
           </li>
           <% end %>
