--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -1,8 +1,8 @@
 <div class="static_display">
   <h4><%= @page.name %></h4>
-  <ul>
-    <% Page.all(:page_type => "page").each do |about_page| %>
-    <li><a href="<%= about_page.url %>"><%= about_page.name %></a></li>
+  <ul style="float:right">
+    <% Page.all(:page_type => "page", :order => [:name.desc]).each do |about_page| %>
+    <li><a href="/<%= about_page.url %>"><%= about_page.name %></a></li>
     <% end %>
   </ul>
 
