--- a/m4r/views/admin.erb
+++ b/m4r/views/admin.erb
@@ -7,4 +7,4 @@
   <% end %>
 </ul>
 
-<a href="/admin/new">New Country Page</a>
+<a href="/admin/new">New Country Page</a> -- <a href="/admin/all/sync">Update All Project API data</a>
