Small about fixes

--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -2,7 +2,7 @@
   <h4><%= @page.name %></h4>
   <ul style="float:right">
     <% Page.all(:page_type => "page", :order => [:name.asc]).each do |about_page| %>
-    <li><a href="<%= about_page.url %>"><%= about_page.name %></a></li>
+    <li><a href="/about<%= about_page.url %>"><%= about_page.name %></a></li>
     <% end %>
   </ul>
 
