--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -4,8 +4,8 @@
           <li class="first"><a href="javascript:return false;" style="<%= @page[:name].length > 26 ? 'padding-top: 6px' : ''%>"><%= @page[:name].upcase %></a>
             <ul>
               <% if @page[:name] == "World"   %>
-              <% Page.all(:page_type => "region").each do |region_attr| %>
-              <li><a href="#" onclick="return wb.setLocation('<%= region_attr[:name] %>',<%= region_attr[:lat] %>,<%= region_attr[:lon] %>,<%= region_attr[:zoom] %>)"><%= region_attr[:name] %></a></li>
+              <% Page.all(:page_type => "region", :order => [name.asc]).each do |region_attr| %>
+              <li><a href="<%= region_attr.url %>"><%= region_attr[:name] %></a></li>
               <% end unless @page.children.nil? %>
               <% else %>
                 <% if @page[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li><% end %>
