--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -8,7 +8,7 @@
         <% end %>
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
-                <li><a href="http://twitter.com/home?status=@page_title+<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" target="_new" id="">Twitter</a></li>
+                <li><a href="http://twitter.com/home?status=<%= @page_title.gsub(/\s/,'+') %>+<%= PLATFORM_API_URL + request.env["REQUEST_URI"] %>" target="_new" id="">Twitter</a></li>
                 <li><a href="http://facebook.com" id="">Facebook</a></li>
                 <!-- <li><a href="#" id="">Embed the Map</a></li> -->
               </ul>
