--- a/css/layout.css
+++ b/css/layout.css
@@ -443,6 +443,10 @@ margin-bottom:10px;
 #share ul li.print a {background:#fff url(../images/sprite2.png) 0px -326px no-repeat;padding-left:19px; border-top:1px solid #fff;   border-bottom:1px solid #fff; padding-right:10px; border-left:1px solid #fff}
 #share ul li.email{text-indent:-9999px; }
 #share ul li.email a {background:#fff url(../images/sprite2.png) 0px -266px no-repeat;padding-left:19px;border:1px solid #fff; margin:0 3px 0 3px }
+#share a#share_options {
+    background: url("../images/sprite2.png") no-repeat scroll 0 -61px #FFFFFF;
+    padding-left: 19px;
+}
 
 #layerinfo ul{float:left; list-style:none; margin: 0;padding:0; width:500px;}
 #layerinfo{ padding:22px 0 0 0; margin-right:75px;float:right;}
@@ -516,7 +520,8 @@ margin-bottom:10px;
 	
 .dropmenu li {
 	list-style: none;
-	float: left;width:128px; /* Width to help Opera out */
+	float: left;
+/*  width:128px; */
 }
 
 #map_console .inactive {
