Fix region maps

--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -23,7 +23,7 @@
                 <% if !@page.overview.nil? && @page.overview.length != 0 %>
                 <%= @page.overview %>
                 <% else %>
-                The <strong>Mapping for Results Platform</strong> (<em>beta version</em>) provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <a class="readmore" href="/about">Read More »</a>
+                The <strong>Mapping for Results Platform</strong> provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <br /><a class="readmore" href="/about">Read More »</a>
               <% end %>
               </div>
               </div>
